--- a/services.html
+++ b/services.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Services - Trolex Investment</title>
-    <link href="https://fonts.googleapis.com/css2?family=Great+Vibes&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Playfair+Display:wght@400;700&display=swap" rel="stylesheet">
     <style>
         body {
             font-family: 'Great Vibes', cursive;
@@ -12,6 +12,9 @@
             padding: 0;
             line-height: 1.6;
         }
+	body {
+	    font-family: 'Arial', sans-serif;
+	}
         header {
             background: linear-gradient(to right, lime, turquoise); /* Lime Green blending with Turquoise */
             padding: 20px;
@@ -42,6 +45,9 @@
             margin-top: 40px;
             letter-spacing: 1px;
         }
+	h1, h2, h3, .header-text {
+		font-family: 'Playfair Display', serif;
+	}    
         .service {
             margin: 20px;
             padding: 20px;
