--- a/contact.html
+++ b/contact.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Contact Us - Trolex Investment</title>
-    <link href="https://fonts.googleapis.com/css2?family=Great+Vibes&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Playfair+Display:wght@400;700&display=swap" rel="stylesheet">
     <style>
         body {
             font-family: 'Great Vibes', cursive;
@@ -12,6 +12,9 @@
             padding: 0;
             line-height: 1.6;
         }
+	body {
+	    font-family: 'Arial', sans-serif;
+	}
         header {
             background: linear-gradient(to right, navy, #FF1493); /* Navy Blue blending with Dark Pink */
             padding: 20px;
@@ -42,7 +45,10 @@
             margin-top: 40px;
             letter-spacing: 1px;
         }
-		.contact-info p {
+	h1, h2, h3, .header-text {
+		font-family: 'Playfair Display', serif;
+	}    
+	.contact-info p {
             font-size: 34px;
             color:  #000000;
             font-weight: bold;
