--- a/index.html
+++ b/index.html
@@ -46,6 +46,43 @@
             color: #333;
             text-align: center;
         }
+        /* Set a base font size based on viewport width */
+        html {
+            font-size: 1.5vw;
+        }
+
+        /* Flexible container layout */
+        .container {
+            width: 90%;
+            padding: 2vw;
+            margin: auto;
+        }
+
+        /* Make images responsive */
+        img {
+            max-width: 100%;
+            height: auto;
+        }
+
+        /* Media query for screens smaller than 600px */
+        @media (max-width: 600px) {
+            html {
+                font-size: 3vw;
+            }
+            .header-text {
+                font-size: 2rem;
+            }
+        }
+
+        /* Media query for screens larger than 1200px */
+        @media (min-width: 1200px) {
+            html {
+                font-size: 1vw;
+            }
+            .header-text {
+                font-size: 3rem;
+            }
+        }	    
     </style>
 </head>
 <body>
