--- a/services.html
+++ b/services.html
@@ -16,7 +16,7 @@
 	    font-family: 'Arial', sans-serif;
 	}
         header {
-            background: linear-gradient(to right, lime, turquoise); /* Lime Green blending with Turquoise */
+            background: linear-gradient(to right, lime, turquoise);
             padding: 20px;
             text-align: center;
         }
@@ -40,7 +40,7 @@
         }
         h1 {
             font-size: 48px;
-            color: #1E90FF; /* Bluish Green */
+            color: #1E90FF;
             text-align: center;
             margin-top: 40px;
             letter-spacing: 1px;
@@ -51,59 +51,57 @@
         .service {
             margin: 20px;
             padding: 20px;
-            border: 2px solid #1E90FF; /* Bluish Green */
+            border: 2px solid #1E90FF;
             border-radius: 10px;
             transition: background-color 0.3s;
         }
         .service:hover {
-            background-color: rgba(30, 144, 255, 0.1); /* Light Blue on hover */
+            background-color: rgba(30, 144, 255, 0.1);
         }
         .service h2 {
             font-size: 32px; 
-            color: #1E90FF; /* Bluish Green */
+            color: #1E90FF;
             margin-bottom: 10px;
         }
         .service p {
             font-size: 28px; 
         }
         .read-more {
-            color: #1E90FF; /* Bluish Green */
+            color: #1E90FF;
             font-weight: bold;
             text-decoration: underline;
             cursor: pointer;
         }
         footer {
             text-align: center;
-            background: linear-gradient(to right, lime, turquoise); /* Lime Green blending with Turquoise */
+            background: linear-gradient(to right, lime, turquoise);
             color: white;
             padding: 20px;
         }
         footer p {
             margin: 0;
         }
-        /* Modal Styles */
         .modal {
-            display: none; /* Hidden by default */
-            position: fixed; /* Stay in place */
-            z-index: 1; /* Sit on top */
+            display: none;
+            position: fixed;
+            z-index: 1;
             left: 0;
             top: 0;
-            width: 100%; /* Full width */
-            height: 100%; /* Full height */
-            overflow: auto; /* Enable scroll if needed */
-            background-color: rgb(0,0,0); /* Fallback color */
-            background-color: rgba(0,0,0,0.4); /* Black w/ opacity */
+            width: 100%;
+            height: 100%;
+            overflow: auto;
+            background-color: rgba(0,0,0,0.4);
             padding-top: 60px;
         }
         .modal-content {
             background-color: #fefefe;
-            margin: 5% auto; /* 15% from the top and centered */
+            margin: 5% auto;
             padding: 20px;
             border: 1px solid #888;
-            width: 80%; /* Could be more or less, depending on screen size */
+            width: 80%;
         }
 		.modal-content h2 {
-            font-size: 2em; /* Increased size for the modal header */
+            font-size: 2em;
         }
 		.modal-content p {
             font-size: 1.5em; 
@@ -120,25 +118,21 @@
             text-decoration: none;
             cursor: pointer;
         }
-        /* Set a base font size based on viewport width */
         html {
             font-size: 1.5vw;
         }
 
-        /* Flexible container layout */
         .container {
             width: 90%;
             padding: 2vw;
             margin: auto;
         }
 
-        /* Make images responsive */
         img {
             max-width: 100%;
             height: auto;
         }
 
-        /* Media query for screens smaller than 600px */
         @media (max-width: 600px) {
             html {
                 font-size: 3vw;
@@ -148,7 +142,6 @@
             }
         }
 
-        /* Media query for screens larger than 1200px */
         @media (min-width: 1200px) {
             html {
                 font-size: 1vw;
@@ -175,151 +168,105 @@
     <h1>Our Services</h1>
 
     <div class="service">
-        <h2>1. Immigration and Labor Application Services</h2>
-        <p>We facilitate applications for permanent residence, emergency work permits, and emergency short-term and long-term permits.</p>
+        <h2>1. Immigration Application Services</h2>
+        <p>We facilitate applications for various permits, including permanent residence.</p>
         <span class="read-more" onclick="openModal('modal1')">Read More</span>
     </div>
 
     <div class="service">
-        <h2>2. Online OBRS Company Registration</h2>
-        <p>Assistance with company/business registration and deregistration through the Online Business Registration System (OBRS).</p>
+        <h2>2. Labour Hiring</h2>
+        <p>We assist with hiring and handle all human resource functions on behalf of the company.</p>
         <span class="read-more" onclick="openModal('modal2')">Read More</span>
     </div>
 
+    <!-- Additional Services -->
     <div class="service">
-        <h2>3. Annual Return Payments</h2>
-        <p>We help businesses with their annual return payments, ensuring compliance with local regulations.</p>
-        <span class="read-more" onclick="openModal('modal3')">Read More</span>
+        <h2>12. Engineering Registration Board (ERB)</h2>
+        <p>We assist with the registration of engineers to enable them to practice in Botswana.</p>
+        <span class="read-more" onclick="openModal('modal12')">Read More</span>
     </div>
 
     <div class="service">
-        <h2>4. Director/Shareholder Changes</h2>
-        <p>We assist with changes to company directors and shareholders to maintain accurate records.</p>
-        <span class="read-more" onclick="openModal('modal4')">Read More</span>
+        <h2>13. Transportation</h2>
+        <p>We provide transportation services for employees to and from work for companies.</p>
+        <span class="read-more" onclick="openModal('modal13')">Read More</span>
     </div>
 
     <div class="service">
-        <h2>5. Appointment of Company Secretary</h2>
-        <p>Guidance on the appointment of a company secretary to ensure compliance with corporate governance.</p>
-        <span class="read-more" onclick="openModal('modal5')">Read More</span>
+        <h2>14. VISAS Applications</h2>
+        <p>We apply for visas for applicants from countries that require visas for entry.</p>
+        <span class="read-more" onclick="openModal('modal14')">Read More</span>
     </div>
 
     <div class="service">
-        <h2>6. Bank Account Opening</h2>
-        <p>We provide assistance with opening bank accounts for companies and businesses.</p>
-        <span class="read-more" onclick="openModal('modal6')">Read More</span>
+        <h2>15. Exemptions Application</h2>
+        <p>We assist with exemptions applications for roles exempt from the permit application process.</p>
+        <span class="read-more" onclick="openModal('modal15')">Read More</span>
     </div>
 
     <div class="service">
-        <h2>7. Bookkeeping and Accounting</h2>
-        <p>We offer bookkeeping and accounting services to ensure proper financial management.</p>
-        <span class="read-more" onclick="openModal('modal7')">Read More</span>
-    </div>
-
-    <div class="service">
-        <h2>8. Tax Clearance Application</h2>
-        <p>We help clients with tax clearance applications for compliance and regulatory purposes.</p>
-        <span class="read-more" onclick="openModal('modal8')">Read More</span>
-    </div>
-
-    <div class="service">
-        <h2>9. Financial Work/Accountants</h2>
-        <p>We assist with financial work and connect clients with accountants for tax payments.</p>
-        <span class="read-more" onclick="openModal('modal9')">Read More</span>
-    </div>
-
-    <div class="service">
-        <h2>10. Assistance for Loans/Grants</h2>
-        <p>We assist with applications for loans and grants from organizations like CEDA and Gender Affairs.</p>
-        <span class="read-more" onclick="openModal('modal10')">Read More</span>
+        <h2>16. Waivers Issuing</h2>
+        <p>We facilitate the issuing of waivers for those eligible for residence or work permit tallies.</p>
+        <span class="read-more" onclick="openModal('modal16')">Read More</span>
     </div>
 
     <!-- Modal Structure -->
-    <!-- Modal for Application for Permits -->
+    <!-- Modal for Immigration Application Services -->
 	<div id="modal1" class="modal">
 	    <div class="modal-content">
 	        <span class="close" onclick="closeModal('modal1')">&times;</span>
-            <h2>Application for Permits</h2>
-            <p>This includes applications for permanent residence, emergency work permits, short-term, and long-term permits.</p>
-            <p><strong>Citizenship:</strong> This is for people who have resided in Botswana for the past ten years with no break. For example, having ten residential and work permits for the previous years and would like to become a citizen.</p>
-            <p><strong>Short Term Permits:</strong> Commonly known as emergency work permits, they range from:</p>
-            <ul>
-               <li>One (1) day to fourteen days</li>
-               <li>Fourteen days to three months</li>
-            </ul>
-            <p><strong>Long Term Permits:</strong> This permit duration is from four (4) months to five (5) years.</p>
+            <h2>Immigration Application Services</h2>
+            <p><strong>Permanent Residence:</strong> We assist with the application for permanent residence for immigrants seeking to stay in Botswana permanently.</p>
+            <p><strong>Botswana Qualification Authority (BQA):</strong> We assist in evaluating certificates for immigrants and those planning to work in Botswana who studied abroad.</p>
         </div>
     </div>
 
     <div id="modal2" class="modal">
         <div class="modal-content">
             <span class="close" onclick="closeModal('modal2')">&times;</span>
-            <h2>Online OBRS Company Registration</h2>
-            <p>We provide a comprehensive guide and support for businesses looking to register or deregister via the Online Business Registration System. Our services include preparing necessary documentation and ensuring compliance with local laws.</p>
+            <h2>Labour Hiring</h2>
+            <p>We assist with hiring on behalf of companies, managing all HR functions to support business operations.</p>
         </div>
     </div>
 
-    <div id="modal3" class="modal">
+    <!-- Additional Modals -->
+    <div id="modal12" class="modal">
         <div class="modal-content">
-            <span class="close" onclick="closeModal('modal3')">&times;</span>
-            <h2>Annual Return Payments</h2>
-            <p>We remind and assist businesses in making their annual return payments on time, helping to avoid penalties and maintain good standing with regulatory bodies.</p>
+            <span class="close" onclick="closeModal('modal12')">&times;</span>
+            <h2>Engineering Registration Board (ERB)</h2>
+            <p>We assist with registering diploma, degree, and master's engineers with the ERB to enable them to practice in Botswana.</p>
         </div>
     </div>
 
-    <div id="modal4" class="modal">
+    <div id="modal13" class="modal">
         <div class="modal-content">
-            <span class="close" onclick="closeModal('modal4')">&times;</span>
-            <h2>Director/Shareholder Changes</h2>
-            <p>Our experts help businesses manage changes in directors and shareholders, ensuring that all changes are properly documented and filed with the relevant authorities.</p>
+            <span class="close" onclick="closeModal('modal13')">&times;</span>
+            <h2>Transportation</h2>
+            <p>We offer transportation services for employees, ensuring safe transit to and from the workplace.</p>
         </div>
     </div>
 
-    <div id="modal5" class="modal">
+    <div id="modal14" class="modal">
         <div class="modal-content">
-            <span class="close" onclick="closeModal('modal5')">&times;</span>
-            <h2>Appointment of Company Secretary</h2>
-            <p>We guide businesses through the process of appointing a company secretary, including their roles, responsibilities, and compliance requirements.</p>
+            <span class="close" onclick="closeModal('modal14')">&times;</span>
+            <h2>VISAS Applications</h2>
+            <p>We handle visa applications for applicants from countries requiring visas for Botswana entry.</p>
         </div>
     </div>
 
-    <div id="modal6" class="modal">
+    <div id="modal15" class="modal">
         <div class="modal-content">
-            <span class="close" onclick="closeModal('modal6')">&times;</span>
-            <h2>Bank Account Opening</h2>
-            <p>We provide the necessary documentation and advice to facilitate the opening of bank accounts for businesses, ensuring compliance with banking regulations.</p>
+            <span class="close" onclick="closeModal('modal15')">&times;</span>
+            <h2>Exemptions Application</h2>
+            <p>We assist with exemptions for positions exempt from the standard permit application process, such as some investors.</p>
         </div>
     </div>
 
-    <div id="modal7" class="modal">
+    <div id="modal16" class="modal">
         <div class="modal-content">
-            <span class="close" onclick="closeModal('modal7')">&times;</span>
-            <h2>Bookkeeping and Accounting</h2>
-            <p>We offer professional bookkeeping and accounting services tailored to meet the needs of small and medium-sized enterprises.</p>
-        </div>
-    </div>
-
-    <div id="modal8" class="modal">
-        <div class="modal-content">
-            <span class="close" onclick="closeModal('modal8')">&times;</span>
-            <h2>Tax Clearance Application</h2>
-            <p>We assist clients in preparing and submitting tax clearance applications, ensuring all necessary documents are in order for compliance.</p>
-        </div>
-    </div>
-
-    <div id="modal9" class="modal">
-        <div class="modal-content">
-            <span class="close" onclick="closeModal('modal9')">&times;</span>
-            <h2>Financial Work/Accountants</h2>
-            <p>We connect clients with qualified accountants and provide support for their financial work, ensuring all tax obligations are met.</p>
-        </div>
-    </div>
-
-    <div id="modal10" class="modal">
-        <div class="modal-content">
-            <span class="close" onclick="closeModal('modal10')">&times;</span>
-            <h2>Assistance for Loans/Grants</h2>
-            <p>We guide clients through the process of applying for loans and grants from various organizations, providing support at every step.</p>
+            <span class="close" onclick="closeModal('modal16')">&times;</span>
+            <h2>Waivers Issuing</h2>
+            <p>We help issue waivers to individuals qualifying for residence or work permits in Botswana.</p>
         </div>
     </div>
 
@@ -331,12 +278,11 @@
         function openModal(modalId) {
             document.getElementById(modalId).style.display = "block";
         }
-
+        
         function closeModal(modalId) {
             document.getElementById(modalId).style.display = "none";
         }
-
-        // Close modal when clicking outside of it
+        
         window.onclick = function(event) {
             const modals = document.querySelectorAll('.modal');
             modals.forEach(modal => {
@@ -346,5 +292,6 @@
             });
         }
     </script>
+
 </body>
 </html>
