--- a/services.html
+++ b/services.html
@@ -161,6 +161,7 @@
                 <li><a href="index.html">Home</a></li>
                 <li><a href="about.html">About Us</a></li>
                 <li><a href="contact.html">Contact Us</a></li>
+		<li><a href="companies worked with.html">Companies We Worked With</a></li>
             </ul>
         </nav>
     </header>
