--- a/contact.html
+++ b/contact.html
@@ -133,6 +133,7 @@
                 <li><a href="index.html">Home</a></li>
                 <li><a href="about.html">About Us</a></li>
                 <li><a href="services.html">Services</a></li>
+		<li><a href="companies worked with.html">Companies We Worked With</a></li>
             </ul>
         </nav>
     </header>
