--- a/about.html
+++ b/about.html
@@ -101,6 +101,7 @@
                 <li><a href="index.html">Home</a></li>
                 <li><a href="services.html">Services</a></li>
                 <li><a href="contact.html">Contact Us</a></li>
+		<li><a href="companies worked with.html">Companies We Worked With</a></li>
             </ul>
         </nav>
     </header>
