--- a/services.html
+++ b/services.html
@@ -7,13 +7,10 @@
     <link href="https://fonts.googleapis.com/css2?family=Playfair+Display:wght@400;700&display=swap" rel="stylesheet">
     <style>
         body {
-            font-family: 'Great Vibes', cursive;
+            font-family: 'Arial', sans-serif;
             margin: 0;
             padding: 0;
             line-height: 1.6;
-        }
-        body {
-            font-family: 'Arial', sans-serif;
         }
         header {
             background: linear-gradient(to right, lime, turquoise);
@@ -43,11 +40,7 @@
             color: #1E90FF;
             text-align: center;
             margin-top: 40px;
-            letter-spacing: 1px;
         }
-        h1, h2, h3, .header-text {
-            font-family: 'Playfair Display', serif;
-        }    
         .service {
             margin: 20px;
             padding: 20px;
@@ -61,10 +54,6 @@
         .service h2 {
             font-size: 32px; 
             color: #1E90FF;
-            margin-bottom: 10px;
-        }
-        .service p {
-            font-size: 28px; 
         }
         .read-more {
             color: #1E90FF;
@@ -118,34 +107,6 @@
             text-decoration: none;
             cursor: pointer;
         }
-        html {
-            font-size: 1.5vw;
-        }
-        .container {
-            width: 90%;
-            padding: 2vw;
-            margin: auto;
-        }
-        img {
-            max-width: 100%;
-            height: auto;
-        }
-        @media (max-width: 600px) {
-            html {
-                font-size: 3vw;
-            }
-            .header-text {
-                font-size: 2rem;
-            }
-        }
-        @media (min-width: 1200px) {
-            html {
-                font-size: 1vw;
-            }
-            .header-text {
-                font-size: 3rem;
-            }
-        }
     </style>
 </head>
 <body>
@@ -163,40 +124,154 @@
 
     <h1>Our Services</h1>
 
-    <div class="service">
-        <h2>1. Immigration Application Services</h2>
-        <p>We facilitate applications for various permits, including permanent residence.</p>
-        <span class="read-more" onclick="openModal('modal1')">Read More</span>
-    </div>
+    <!-- Services -->
+    <div class="service"><h2>1. Immigration Application Services</h2><span class="read-more" onclick="openModal('modal1')">Read More</span></div>
+    <div class="service"><h2>2. Labour Hiring</h2><span class="read-more" onclick="openModal('modal2')">Read More</span></div>
+    <div class="service"><h2>3. Engineering Registration Board (ERB)</h2><span class="read-more" onclick="openModal('modal3')">Read More</span></div>
+    <div class="service"><h2>4. Transportation</h2><span class="read-more" onclick="openModal('modal4')">Read More</span></div>
+    <div class="service"><h2>5. VISAS Applications</h2><span class="read-more" onclick="openModal('modal5')">Read More</span></div>
+    <div class="service"><h2>6. Exemptions Application</h2><span class="read-more" onclick="openModal('modal6')">Read More</span></div>
+    <div class="service"><h2>7. Waivers Issuing</h2><span class="read-more" onclick="openModal('modal7')">Read More</span></div>
+    <div class="service"><h2>8. Short-Term Permits</h2><span class="read-more" onclick="openModal('modal8')">Read More</span></div>
+    <div class="service"><h2>9. Long-Term Permits</h2><span class="read-more" onclick="openModal('modal9')">Read More</span></div>
+    <div class="service"><h2>10. Botswana Qualification Authority</h2><span class="read-more" onclick="openModal('modal10')">Read More</span></div>
+    <div class="service"><h2>11. Workman’s Compensation</h2><span class="read-more" onclick="openModal('modal11')">Read More</span></div>
+    <div class="service"><h2>12. Retirement Fund Registration</h2><span class="read-more" onclick="openModal('modal12')">Read More</span></div>
+    <div class="service"><h2>13. Insurance Registration</h2><span class="read-more" onclick="openModal('modal13')">Read More</span></div>
+    <div class="service"><h2>14. Labour Standards Registration</h2><span class="read-more" onclick="openModal('modal14')">Read More</span></div>
+    <div class="service"><h2>15. Foreign Employment Permits</h2><span class="read-more" onclick="openModal('modal15')">Read More</span></div>
+    <div class="service"><h2>16. Botswana Investment Promotion Authority</h2><span class="read-more" onclick="openModal('modal16')">Read More</span></div>
+    <div class="service"><h2>17. Short-Term Permits</h2><span class="read-more" onclick="openModal('modal17')">Read More</span></div>
+    <div class="service"><h2>18. Long-Term Permits</h2><span class="read-more" onclick="openModal('modal18')">Read More</span></div>
+    <div class="service"><h2>19. Botswana Qualification Authority</h2><span class="read-more" onclick="openModal('modal19')">Read More</span></div>
+    <div class="service"><h2>20. Other Services</h2><span class="read-more" onclick="openModal('modal20')">Read More</span></div>
 
-    <div class="service">
-        <h2>17. Short-Term Permits</h2>
-        <p>Commonly known as emergency work permits.</p>
-        <span class="read-more" onclick="openModal('modal17')">Read More</span>
-    </div>
-
-    <div class="service">
-        <h2>18. Long-Term Permits</h2>
-        <p>Permits for foreigners employed by local companies.</p>
-        <span class="read-more" onclick="openModal('modal18')">Read More</span>
-    </div>
-
-    <div class="service">
-        <h2>19. Botswana Qualification Authority (BQA)</h2>
-        <p>We assist with certificate evaluations for employment purposes.</p>
-        <span class="read-more" onclick="openModal('modal19')">Read More</span>
-    </div>
-
-    <footer>
-        <p>&copy; 2024 Trolex Investment. All Rights Reserved.</p>
-    </footer>
-
-    <!-- Modals -->
+    <!-- Modals for each service -->
     <div id="modal1" class="modal">
         <div class="modal-content">
             <span class="close" onclick="closeModal('modal1')">&times;</span>
             <h2>Immigration Application Services</h2>
-            <p>We assist with various immigration applications, such as permanent residency.</p>
+            <p>We assist with applications for permanent residence and permits for living in Botswana.</p>
+        </div>
+    </div>
+
+    <div id="modal2" class="modal">
+        <div class="modal-content">
+            <span class="close" onclick="closeModal('modal2')">&times;</span>
+            <h2>Labour Hiring</h2>
+            <p>We assist with hiring on behalf of companies, managing all HR functions to support business operations.</p>
+        </div>
+    </div>
+
+    <div id="modal3" class="modal">
+        <div class="modal-content">
+            <span class="close" onclick="closeModal('modal3')">&times;</span>
+            <h2>Engineering Registration Board (ERB)</h2>
+            <p>We assist engineers with their registration to ensure they can practice in Botswana.</p>
+        </div>
+    </div>
+
+    <div id="modal4" class="modal">
+        <div class="modal-content">
+            <span class="close" onclick="closeModal('modal4')">&times;</span>
+            <h2>Transportation</h2>
+            <p>We provide transportation services for employees to and from the workplace.</p>
+        </div>
+    </div>
+
+    <div id="modal5" class="modal">
+        <div class="modal-content">
+            <span class="close" onclick="closeModal('modal5')">&times;</span>
+            <h2>VISAS Applications</h2>
+            <p>We assist in applying for various types of visas including work and visitor visas.</p>
+        </div>
+    </div>
+
+    <div id="modal6" class="modal">
+        <div class="modal-content">
+            <span class="close" onclick="closeModal('modal6')">&times;</span>
+            <h2>Exemptions Application</h2>
+            <p>We handle applications for exemptions from specific immigration or work-related requirements.</p>
+        </div>
+    </div>
+
+    <div id="modal7" class="modal">
+        <div class="modal-content">
+            <span class="close" onclick="closeModal('modal7')">&times;</span>
+            <h2>Waivers Issuing</h2>
+            <p>We assist in the issuance of waivers for various permits and compliance requirements.</p>
+        </div>
+    </div>
+
+    <div id="modal8" class="modal">
+        <div class="modal-content">
+            <span class="close" onclick="closeModal('modal8')">&times;</span>
+            <h2>Short-Term Permits</h2>
+            <p>We assist in obtaining emergency work permits that range from one day to three months.</p>
+        </div>
+    </div>
+
+    <div id="modal9" class="modal">
+        <div class="modal-content">
+            <span class="close" onclick="closeModal('modal9')">&times;</span>
+            <h2>Long-Term Permits</h2>
+            <p>Long-term permits are for foreigners employed by local companies in Botswana, valid for 4 months to 5 years.</p>
+        </div>
+    </div>
+
+    <div id="modal10" class="modal">
+        <div class="modal-content">
+            <span class="close" onclick="closeModal('modal10')">&times;</span>
+            <h2>Botswana Qualification Authority</h2>
+            <p>We assist with the evaluation of certificates for immigrants who studied abroad and wish to work in Botswana.</p>
+        </div>
+    </div>
+
+    <div id="modal11" class="modal">
+        <div class="modal-content">
+            <span class="close" onclick="closeModal('modal11')">&times;</span>
+            <h2>Workman’s Compensation</h2>
+            <p>We help companies secure worker compensation insurance as required by law in Botswana.</p>
+        </div>
+    </div>
+
+    <div id="modal12" class="modal">
+        <div class="modal-content">
+            <span class="close" onclick="closeModal('modal12')">&times;</span>
+            <h2>Retirement Fund Registration</h2>
+            <p>We assist businesses with setting up retirement funds for their employees, ensuring compliance with regulations.</p>
+        </div>
+    </div>
+
+    <div id="modal13" class="modal">
+        <div class="modal-content">
+            <span class="close" onclick="closeModal('modal13')">&times;</span>
+            <h2>Insurance Registration</h2>
+            <p>We help businesses and individuals with registering for insurance and managing claims.</p>
+        </div>
+    </div>
+
+    <div id="modal14" class="modal">
+        <div class="modal-content">
+            <span class="close" onclick="closeModal('modal14')">&times;</span>
+            <h2>Labour Standards Registration</h2>
+            <p>We assist in registering companies for compliance with Botswana's labour standards and regulations.</p>
+        </div>
+    </div>
+
+    <div id="modal15" class="modal">
+        <div class="modal-content">
+            <span class="close" onclick="closeModal('modal15')">&times;</span>
+            <h2>Foreign Employment Permits</h2>
+            <p>We provide assistance for foreign nationals applying for employment permits in Botswana.</p>
+        </div>
+    </div>
+
+    <div id="modal16" class="modal">
+        <div class="modal-content">
+            <span class="close" onclick="closeModal('modal16')">&times;</span>
+            <h2>Botswana Investment Promotion Authority</h2>
+            <p>We assist companies and individuals with registration for investment purposes in Botswana.</p>
         </div>
     </div>
 
@@ -204,11 +279,7 @@
         <div class="modal-content">
             <span class="close" onclick="closeModal('modal17')">&times;</span>
             <h2>Short-Term Permits</h2>
-            <p>This service covers permits ranging from:</p>
-            <ul>
-                <li>One (1) day to fourteen (14) days.</li>
-                <li>Fourteen (14) days to three (3) months.</li>
-            </ul>
+            <p>These are emergency work permits with durations ranging from one day to fourteen days or up to three months.</p>
         </div>
     </div>
 
@@ -216,16 +287,23 @@
         <div class="modal-content">
             <span class="close" onclick="closeModal('modal18')">&times;</span>
             <h2>Long-Term Permits</h2>
-            <p>This service provides permits for durations ranging from four (4) months to five (5) years.</p>
-            <p>These are typically for foreigners employed by local companies or those setting up operations in Botswana.</p>
+            <p>These permits are issued for employment in Botswana with a validity of four months to five years.</p>
         </div>
     </div>
 
     <div id="modal19" class="modal">
         <div class="modal-content">
             <span class="close" onclick="closeModal('modal19')">&times;</span>
-            <h2>Botswana Qualification Authority (BQA)</h2>
-            <p>We assist with the evaluation of certificates for immigrants seeking employment in Botswana, especially those who studied abroad.</p>
+            <h2>Botswana Qualification Authority</h2>
+            <p>We evaluate certificates for individuals seeking to work in Botswana after studying abroad.</p>
+        </div>
+    </div>
+
+    <div id="modal20" class="modal">
+        <div class="modal-content">
+            <span class="close" onclick="closeModal('modal20')">&times;</span>
+            <h2>Other Services</h2>
+            <p>We offer various other services related to business operations in Botswana. Please contact us for more details.</p>
         </div>
     </div>
 
@@ -233,19 +311,14 @@
         function openModal(modalId) {
             document.getElementById(modalId).style.display = "block";
         }
-        
         function closeModal(modalId) {
             document.getElementById(modalId).style.display = "none";
         }
-        
-        window.onclick = function(event) {
-            const modals = document.querySelectorAll('.modal');
-            modals.forEach(modal => {
-                if (event.target == modal) {
-                    modal.style.display = "none";
-                }
-            });
-        }
     </script>
+
+    <footer>
+        <p>&copy; 2024 Trolex Investment. All Rights Reserved.</p>
+    </footer>
+
 </body>
 </html>
