--- a/services.html
+++ b/services.html
@@ -125,73 +125,80 @@
     <h1>Our Services</h1>
 
     <!-- Services -->
-    <div class="service"><h2>1. Immigration Application Services</h2><span class="read-more" onclick="openModal('modal1')">Read More</span></div>
-    <div class="service"><h2>2. Labour Hiring</h2><span class="read-more" onclick="openModal('modal2')">Read More</span></div>
-    <div class="service"><h2>3. Engineering Registration Board (ERB)</h2><span class="read-more" onclick="openModal('modal3')">Read More</span></div>
-    <div class="service"><h2>4. Transportation</h2><span class="read-more" onclick="openModal('modal4')">Read More</span></div>
-    <div class="service"><h2>5. VISAS Applications</h2><span class="read-more" onclick="openModal('modal5')">Read More</span></div>
-    <div class="service"><h2>6. Exemptions Application</h2><span class="read-more" onclick="openModal('modal6')">Read More</span></div>
+    <div class="service"><h2>1. Citizenship Application</h2><span class="read-more" onclick="openModal('modal1')">Read More</span></div>
+    <div class="service"><h2>2. Permanent Residence</h2><span class="read-more" onclick="openModal('modal2')">Read More</span></div>
+    <div class="service"><h2>3. Short Term Permits</h2><span class="read-more" onclick="openModal('modal3')">Read More</span></div>
+    <div class="service"><h2>4. Long Term Permits</h2><span class="read-more" onclick="openModal('modal4')">Read More</span></div>
+    <div class="service"><h2>5. Exemptions Application</h2><span class="read-more" onclick="openModal('modal5')">Read More</span></div>
+    <div class="service"><h2>6. VISAS</h2><span class="read-more" onclick="openModal('modal6')">Read More</span></div>
     <div class="service"><h2>7. Waivers Issuing</h2><span class="read-more" onclick="openModal('modal7')">Read More</span></div>
-    <div class="service"><h2>8. Short-Term Permits</h2><span class="read-more" onclick="openModal('modal8')">Read More</span></div>
-    <div class="service"><h2>9. Long-Term Permits</h2><span class="read-more" onclick="openModal('modal9')">Read More</span></div>
-    <div class="service"><h2>10. Botswana Qualification Authority</h2><span class="read-more" onclick="openModal('modal10')">Read More</span></div>
-    <div class="service"><h2>11. Workman’s Compensation</h2><span class="read-more" onclick="openModal('modal11')">Read More</span></div>
-    <div class="service"><h2>12. Retirement Fund Registration</h2><span class="read-more" onclick="openModal('modal12')">Read More</span></div>
-    <div class="service"><h2>13. Insurance Registration</h2><span class="read-more" onclick="openModal('modal13')">Read More</span></div>
-    <div class="service"><h2>14. Labour Standards Registration</h2><span class="read-more" onclick="openModal('modal14')">Read More</span></div>
-    <div class="service"><h2>15. Foreign Employment Permits</h2><span class="read-more" onclick="openModal('modal15')">Read More</span></div>
-    <div class="service"><h2>16. Botswana Investment Promotion Authority</h2><span class="read-more" onclick="openModal('modal16')">Read More</span></div>
-    <div class="service"><h2>17. Short-Term Permits</h2><span class="read-more" onclick="openModal('modal17')">Read More</span></div>
-    <div class="service"><h2>18. Long-Term Permits</h2><span class="read-more" onclick="openModal('modal18')">Read More</span></div>
-    <div class="service"><h2>19. Botswana Qualification Authority</h2><span class="read-more" onclick="openModal('modal19')">Read More</span></div>
-    <div class="service"><h2>20. Other Services</h2><span class="read-more" onclick="openModal('modal20')">Read More</span></div>
+    <div class="service"><h2>8. Labour Hire</h2><span class="read-more" onclick="openModal('modal8')">Read More</span></div>
+    <div class="service"><h2>9. Engineering Registration Board(ERB)</h2><span class="read-more" onclick="openModal('modal9')">Read More</span></div>
+    <div class="service"><h2>10. Transportation</h2><span class="read-more" onclick="openModal('modal10')">Read More</span></div>
+    <div class="service"><h2>11. Botswana Qualification Authority</h2><span class="read-more" onclick="openModal('modal11')">Read More</span></div>
+    <div class="service"><h2>12. Online OBRS Company/Business Registration/Deregistration</h2><span class="read-more" onclick="openModal('modal12')">Read More</span></div>
+    <div class="service"><h2>13. Annual Return Payments</h2><span class="read-more" onclick="openModal('modal13')">Read More</span></div>
+    <div class="service"><h2>14. Direct Shareholder Changes</h2><span class="read-more" onclick="openModal('modal14')">Read More</span></div>
+    <div class="service"><h2>15. Appointment Of Company Secretary</h2><span class="read-more" onclick="openModal('modal15')">Read More</span></div>
+    <div class="service"><h2>16. Share Certificates and Allocation</h2><span class="read-more" onclick="openModal('modal16')">Read More</span></div>
+    <div class="service"><h2>17. Bank Account Opening for Company/BUsiness</h2><span class="read-more" onclick="openModal('modal17')">Read More</span></div>
+    <div class="service"><h2>18. Bookkeeping/Account for clients</h2><span class="read-more" onclick="openModal('modal18')">Read More</span></div>
+    <div class="service"><h2>19. Financila Work/ Accounts for tax payments</h2><span class="read-more" onclick="openModal('modal19')">Read More</span></div>
+    <div class="service"><h2>20. Tax Clearance Application</h2><span class="read-more" onclick="openModal('modal20')">Read More</span></div>
+    <div class="service"><h2>21. Assistance for loans/grants at CEDA, Gender Affairs etc</h2><span class="read-more" onclick="openModal('modal21')">Read More</span></div>
 
     <!-- Modals for each service -->
     <div id="modal1" class="modal">
         <div class="modal-content">
             <span class="close" onclick="closeModal('modal1')">&times;</span>
-            <h2>Immigration Application Services</h2>
-            <p>We assist with applications for permanent residence and permits for living in Botswana.</p>
+            <h2>Application For Citizenship</h2>
+            <p>This is for people who have resided in Botswana for the past ten years with no break. for example, having ten residential and work permits for the previous
+            years and would like to become citizens of Botswana.</p>
         </div>
     </div>
 
     <div id="modal2" class="modal">
         <div class="modal-content">
             <span class="close" onclick="closeModal('modal2')">&times;</span>
-            <h2>Labour Hiring</h2>
-            <p>We assist with hiring on behalf of companies, managing all HR functions to support business operations.</p>
+            <h2>Permanent residence</h2>
+            <p>This is also for those who have resided in a traceable ten years in Botswana without a break(continously staying in Botswana).</p></p>
         </div>
     </div>
 
     <div id="modal3" class="modal">
         <div class="modal-content">
             <span class="close" onclick="closeModal('modal3')">&times;</span>
-            <h2>Engineering Registration Board (ERB)</h2>
-            <p>We assist engineers with their registration to ensure they can practice in Botswana.</p>
+            <h2>Short Term Permits</h2>
+            <p>Commonly Known as emergency work permits and they range from:</p>
+            <p>*One(1) day to fourteen(14) days.</p>
+            <p>*14 days to three months respectively.</p>
         </div>
     </div>
 
     <div id="modal4" class="modal">
         <div class="modal-content">
             <span class="close" onclick="closeModal('modal4')">&times;</span>
-            <h2>Transportation</h2>
-            <p>We provide transportation services for employees to and from the workplace.</p>
+            <h2>Long Term Permits</h2>
+            <p>This permits duration is from four(4) months to five(5) years.</p>
+            <p>It's for people who are foreigners and have been employed by a local company  or their
+            companies bringing them for seccondment in Botswana.</p>
         </div>
     </div>
 
     <div id="modal5" class="modal">
         <div class="modal-content">
             <span class="close" onclick="closeModal('modal5')">&times;</span>
-            <h2>VISAS Applications</h2>
-            <p>We assist in applying for various types of visas including work and visitor visas.</p>
+            <h2>Exemptions Applications</h2>
+            <p>They are positions of work which are exempted from permit application process e.g some investors
+            are exempted, so we assist in exemption applications. </p>
         </div>
     </div>
 
     <div id="modal6" class="modal">
         <div class="modal-content">
             <span class="close" onclick="closeModal('modal6')">&times;</span>
-            <h2>Exemptions Application</h2>
-            <p>We handle applications for exemptions from specific immigration or work-related requirements.</p>
+            <h2>VISAS</h2>
+            <p>We apply for VISAS for all applicants who come from countries that are required to come in using VISAS.</p>
         </div>
     </div>
 
@@ -200,110 +207,132 @@
             <span class="close" onclick="closeModal('modal7')">&times;</span>
             <h2>Waivers Issuing</h2>
             <p>We assist in the issuance of waivers for various permits and compliance requirements.</p>
+            <p>Waivers are legal documents given to all people who qualify and are approved to be covered by a resident document or they
+            get it to tally it with a work permit for stay in Botswana.</p>
         </div>
     </div>
 
     <div id="modal8" class="modal">
         <div class="modal-content">
             <span class="close" onclick="closeModal('modal8')">&times;</span>
-            <h2>Short-Term Permits</h2>
-            <p>We assist in obtaining emergency work permits that range from one day to three months.</p>
+            <h2>Labour Hire</h2>
+            <p>We assist with the hiring of employees/workers on behalf of companies and handle all human resource function on behalf of your company.</p>
         </div>
     </div>
 
     <div id="modal9" class="modal">
         <div class="modal-content">
             <span class="close" onclick="closeModal('modal9')">&times;</span>
-            <h2>Long-Term Permits</h2>
-            <p>Long-term permits are for foreigners employed by local companies in Botswana, valid for 4 months to 5 years.</p>
+            <h2>Engineering Registration Board(ERB)</h2>
+            <p>We assist with registration of all diploma, degree and Masters Degree Engineers with this organization for
+            for one to practice their trade in Botswana as an engineer.</p></p>
         </div>
     </div>
 
     <div id="modal10" class="modal">
         <div class="modal-content">
             <span class="close" onclick="closeModal('modal10')">&times;</span>
-            <h2>Botswana Qualification Authority</h2>
-            <p>We assist with the evaluation of certificates for immigrants who studied abroad and wish to work in Botswana.</p>
+            <h2>Transportation</h2>
+            <p>We provide transportation for workers to and from work for companies.</p>
         </div>
     </div>
 
     <div id="modal11" class="modal">
         <div class="modal-content">
             <span class="close" onclick="closeModal('modal11')">&times;</span>
-            <h2>Workman’s Compensation</h2>
-            <p>We help companies secure worker compensation insurance as required by law in Botswana.</p>
+            <h2>Botswana Qualification Authority(BQA)</h2>
+            <p>We assist in the evaluation of certificates for immigrants and people
+            looking forward to work in Botswana and studied abroad.</p>
+            <p>BQA iS responsible for assessing all the applicants qualifications and
+            approving them so that applicants are then allowed to proceed with ERB application which is requirement for permit applications.</p>
         </div>
     </div>
 
     <div id="modal12" class="modal">
         <div class="modal-content">
             <span class="close" onclick="closeModal('modal12')">&times;</span>
-            <h2>Retirement Fund Registration</h2>
-            <p>We assist businesses with setting up retirement funds for their employees, ensuring compliance with regulations.</p>
+            <h2>Online OBRS Company/ business Regiustration/ Deregistration</h2>
+            <p></p>
         </div>
     </div>
 
     <div id="modal13" class="modal">
         <div class="modal-content">
             <span class="close" onclick="closeModal('modal13')">&times;</span>
-            <h2>Insurance Registration</h2>
-            <p>We help businesses and individuals with registering for insurance and managing claims.</p>
+            <h2>Annual Return Payments</h2>
+            <p></p>
         </div>
     </div>
 
     <div id="modal14" class="modal">
         <div class="modal-content">
             <span class="close" onclick="closeModal('modal14')">&times;</span>
-            <h2>Labour Standards Registration</h2>
-            <p>We assist in registering companies for compliance with Botswana's labour standards and regulations.</p>
+            <h2>Director/Shareholder changes</h2>
+            <p></p>
         </div>
     </div>
 
     <div id="modal15" class="modal">
         <div class="modal-content">
             <span class="close" onclick="closeModal('modal15')">&times;</span>
-            <h2>Foreign Employment Permits</h2>
-            <p>We provide assistance for foreign nationals applying for employment permits in Botswana.</p>
+            <h2>Appointment Of Company Secretary</h2>
+            <p></p>
         </div>
     </div>
 
     <div id="modal16" class="modal">
         <div class="modal-content">
             <span class="close" onclick="closeModal('modal16')">&times;</span>
-            <h2>Botswana Investment Promotion Authority</h2>
-            <p>We assist companies and individuals with registration for investment purposes in Botswana.</p>
+            <h2>Share Certificates and Allocation</h2>
+            <p></p>
         </div>
     </div>
 
     <div id="modal17" class="modal">
         <div class="modal-content">
             <span class="close" onclick="closeModal('modal17')">&times;</span>
-            <h2>Short-Term Permits</h2>
-            <p>These are emergency work permits with durations ranging from one day to fourteen days or up to three months.</p>
+            <h2>Bank Account Opening for Company</h2>
+            <p></p>
         </div>
     </div>
 
     <div id="modal18" class="modal">
         <div class="modal-content">
             <span class="close" onclick="closeModal('modal18')">&times;</span>
-            <h2>Long-Term Permits</h2>
-            <p>These permits are issued for employment in Botswana with a validity of four months to five years.</p>
+            <h2>Bookkeeping/ Account for cliens</h2>
+            <p>Our bookkeeping services are designed to help clients maintain accurate financial records effortlessly. 
+                We manage day-to-day transactions, reconcile bank statements, and prepare financial reports that provide insights into their business performance.
+                By keeping their accounts organized and up-to-date, we enable clients to make informed decisions while saving them time and reducing stress associated with financial management.</p>
         </div>
     </div>
 
     <div id="modal19" class="modal">
         <div class="modal-content">
             <span class="close" onclick="closeModal('modal19')">&times;</span>
-            <h2>Botswana Qualification Authority</h2>
-            <p>We evaluate certificates for individuals seeking to work in Botswana after studying abroad.</p>
+            <h2>Financial Work/ Accounts for tax payments</h2>
+            <p> We offer specialized financial services focused on managing accounts related to tax payments. 
+                This involves meticulous record-keeping of income and expenses, calculating tax liabilities accurately, and ensuring timely payments to avoid penalties.
+                Our expertise help clients maintain financial health while meeting their tax obligations efficiently.</p>
         </div>
     </div>
 
     <div id="modal20" class="modal">
         <div class="modal-content">
             <span class="close" onclick="closeModal('modal20')">&times;</span>
-            <h2>Other Services</h2>
-            <p>We offer various other services related to business operations in Botswana. Please contact us for more details.</p>
+            <h2>Tax Clearance Appliacation</h2>
+            <p> We assist clients in obtaining tax clearance certificates, which are essential for various business transactions and compliance requirements.
+                This service includes reviewing tax obligations, ensuring all filings are up-to-date, and preparing the necessary paperwork for submission to the tax authorities. 
+                Our aim to streamline this process so that clients can focus on their core activities without worrying about tax compliance issues.</p>
+        </div>
+    </div>
+
+    <div id="modal20" class="modal">
+        <div class="modal-content">
+            <span class="close" onclick="closeModal('modal20')">&times;</span>
+            <h2>Assistance for loans/grants at CEDA, Gender Affairs etc</h2>
+            <p>   We provide comprehensive support in navigating the application processes for loans and grants from organizations like CEDA (Citizen Entrepreneurial Development Agency) and Gender Affairs. 
+                This includes assessing eligibility, preparing necessary documentation, crafting compelling proposals, and guiding clients through each step to ensure a smooth submission. 
+                Our goal is to empower individuals and businesses to secure funding that aligns with their goals.</p>
         </div>
     </div>
 
